# fulfill

./: .copier-answers.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
config/: ruff.toml
scripts/: gen_credits.py
src/fulfill/: __init__.py  __main__.py  cli.py  commands.py  debug.py
src/fulfill/data/: devdeps.txt
tests/: __init__.py  test_cli.py
