[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fulfill"
description = "Manage your project. Fulfill your duties."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
duties = [
    "black>=24.4",
    "build>=1.2",
    "duty>=1.3",
    "git-changelog>=2.5",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=2.3",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "ruff>=0.4",
    "tomli>=2.0; python_version < '3.11'",
    "twine>=5.1",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://pawamoy.github.io/fulfill"
Documentation = "https://pawamoy.github.io/fulfill"
Changelog = "https://pawamoy.github.io/fulfill/changelog"
Repository = "https://github.com/pawamoy/fulfill"
Issues = "https://github.com/pawamoy/fulfill/issues"
Discussions = "https://github.com/pawamoy/fulfill/discussions"
Gitter = "https://gitter.im/fulfill/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
fulfill = "fulfill.cli:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
source-includes = ["share"]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
